--- a/Demo/Demo.UI/Chart2/BaseChart2.xaml
+++ b/Demo/Demo.UI/Chart2/BaseChart2.xaml
@@ -41,6 +41,10 @@
                             <Button Content="轴线跨度样式" Click="OnAxisSpanStyle" />
                         </StackPanel>
                         <Button Content="标注" Click="OnCallout" />
+                        <StackPanel Orientation="Horizontal">
+                            <Button Content="十字准线" Click="OnCrosshair" />
+                            <Button Content="定制十字准线" Click="OnCustomCrosshair" />
+                        </StackPanel>
                     </StackPanel>
                 </ScrollViewer>
             </a:Tab>
