--- a/Demo/Demo.UI/Chart2/Chart2Ellipse.xaml
+++ b/Demo/Demo.UI/Chart2/Chart2Ellipse.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Demo.UI.Chart2Box"
+    x:Class="Demo.UI.Chart2Ellipse"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
@@ -14,12 +14,13 @@
     <a:Pane Pos="Right">
         <a:Tabs>
             <a:Tab Order="2" Title="属性">
-                <ScrollViewer>
-                    <StackPanel>
-                        <Button Content="箱形图" Click="OnDef" />
-                        <Button Content="箱形图组" Click="OnGroup" />
-                    </StackPanel>
-                </ScrollViewer>
+                <StackPanel>
+                    <Button Content="椭圆" Click="OnEllipse" />
+                    <Button Content="椭圆样式" Click="OnEllipseStyle" />
+                    <Button Content="旋转椭圆" Click="OnRotation" />
+                    <Button Content="圆" Click="OnCircle" />
+                    <Button Content="锁定刻度的圆" Click="OnLockCircle" />
+                </StackPanel>
             </a:Tab>
         </a:Tabs>
     </a:Pane>
