--- a/Demo/Demo.UI/Chart2/Chart2FillY.xaml
+++ b/Demo/Demo.UI/Chart2/Chart2FillY.xaml
@@ -6,14 +6,14 @@
 
     <a:Main>
         <a:Tabs>
-            <a:Tab Order="1" Title="图表样例">
+            <a:Tab Title="图表样例">
                 <a:Chart2 x:Name="_c" />
             </a:Tab>
         </a:Tabs>
     </a:Main>
     <a:Pane Pos="Right">
         <a:Tabs>
-            <a:Tab Order="2" Title="属性">
+            <a:Tab Order="1" Title="属性">
                 <StackPanel>
                     <Button Content="Y填充图" Click="OnFillY" />
                     <Button Content="散点构造Y填充图" Click="OnValues" />
