--- a/Client/Dt.Mgr/Rbac/Group/GroupList.xaml
+++ b/Client/Dt.Mgr/Rbac/Group/GroupList.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="分组列表">
+    Title="用户组">
 
     <a:Lv x:Name="_lv">
         <a:Cols>
