--- a/Client/Dt.Mgr/Rbac/Group/GroupRoleList.xaml
+++ b/Client/Dt.Mgr/Rbac/Group/GroupRoleList.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="分配角色">
+    Title="关联角色">
 
     <a:Lv x:Name="_lv">
         <DataTemplate>
