--- a/Client/Dt.Mgr/Rbac/Role/RoleUserList.xaml
+++ b/Client/Dt.Mgr/Rbac/Role/RoleUserList.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="用户">
+    Title="关联用户">
 
     <a:Lv x:Name="_lv">
         <a:Cols>
