--- a/Client/Dt.Mgr/Rbac/User/UserGroupList.xaml
+++ b/Client/Dt.Mgr/Rbac/User/UserGroupList.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="所属组">
+    Title="分组">
 
     <a:Lv x:Name="_lv">
         <DataTemplate>
