--- a/Client/Dt.Base/SysTools/SysLog/RealtimeLogWin.xaml
+++ b/Client/Dt.Base/SysTools/SysLog/RealtimeLogWin.xaml
@@ -11,6 +11,7 @@
             <a:Tab Title="实时日志">
                 <a:Tab.Menu>
                     <a:Menu x:Name="_menu">
+                        <a:Mi ID="Sqlite" IsCheckable="True" Click="OnSqlite" />
                         <a:Mi ID="清空" Icon="删除" Click="OnClear" />
                     </a:Menu>
                 </a:Tab.Menu>
