Dlg增加拖拽标志功能，拖拽目标元素时对话框作为标志显示拖拽过程状态，只需目标元素PointerPressed时调用PointerRoutedEventArgs的扩展方法StartDrag

--- a/Client/Dt.Base/Themes/Styles/Dialog.xaml
+++ b/Client/Dt.Base/Themes/Styles/Dialog.xaml
@@ -124,4 +124,31 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <!--拖拽标志-->
+    <Style x:Key="DragFlagDlg" TargetType="a:Dlg">
+        <Setter Property="Title" Value="&#xE0C7;" />
+        <Setter Property="Foreground" Value="{StaticResource 亮红}" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="ShowVeil" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="a:Dlg">
+                    <Grid x:Name="HeaderGrid"
+                          Background="{TemplateBinding Background}"
+                          BorderBrush="{TemplateBinding BorderBrush}"
+                          BorderThickness="{TemplateBinding BorderThickness}">
+                        <!--标题-->
+                        <TextBlock Text="{TemplateBinding Title}"
+                                   FontFamily="{StaticResource IconFont}"
+                                   FontSize="30"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"
+                                   Foreground="{TemplateBinding Foreground}" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
