--- a/Client/Dt.Base/FormView/Design/FvDesign.xaml
+++ b/Client/Dt.Base/FormView/Design/FvDesign.xaml
@@ -8,7 +8,9 @@
         <a:Tab.Menu>
             <a:Menu>
                 <a:Mi ID="增加" Icon="加号" Call="OnAdd" />
-                <a:Mi ID="编辑" Icon="修改" />
+                <a:Mi ID="删除" Icon="删除" Call="OnDel" />
+                <a:Mi ID="Xaml" Icon="HtmL" Call="OnShowEditXaml" ShowBtn="True" BtnCall="OnCopyXaml" />
+                <a:Mi ID="确定" Icon="保存" Call="OnSave" />
             </a:Menu>
         </a:Tab.Menu>
     </a:Tab>
