通用单表视图设计表单

--- a/Client/Dt.Base/FormView/Design/FvXamlEditDlg.xaml
+++ b/Client/Dt.Base/FormView/Design/FvXamlEditDlg.xaml
@@ -13,7 +13,8 @@
 
     <TextBox x:Name="_tb"
              AcceptsReturn="True"
-             ScrollViewer.HorizontalScrollBarVisibility="Auto"
+             TextWrapping="Wrap"
+             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
              ScrollViewer.VerticalScrollBarVisibility="Auto" />
 
 </a:Dlg>
