--- a/Client/Dt.Base/ListView/Design/LvDesign.xaml
+++ b/Client/Dt.Base/ListView/Design/LvDesign.xaml
@@ -19,9 +19,9 @@
                     <Button Content="+模板">
                         <a:Ex.Menu>
                             <a:Menu>
-                                <a:Mi ID="Cols定义" Click="OnViewTemp" />
+                                <a:Mi ID="完整Cols定义" Click="OnViewTemp" />
                                 <a:Mi ID="Col" Click="OnViewTemp" />
-                                <a:Mi ID="行模板" Click="OnViewTemp" />
+                                <a:Mi ID="完整行模板" Click="OnViewTemp" />
                             </a:Menu>
                         </a:Ex.Menu>
                     </Button>
@@ -29,13 +29,12 @@
                 </StackPanel>
             </a:CBar>
             <a:CText ID="ViewXaml" ShowTitle="False" AcceptsReturn="True" RowSpan="6" />
-            <a:CList Title="视图类型" ID="ViewMode" ColSpan="0.5" TitleWidth="90" />
-            <a:CList Title="选择模式" ID="SelectionMode" ColSpan="0.5" TitleWidth="90" />
-            <a:CBool Title="显示分组" ID="ShowGroupHeader" ShowTitle="False" ColSpan="0.5" />
-            <a:CList Title="分组列名" ID="GroupName" IsEditable="True" ColSpan="0.5" TitleWidth="90" />
-
-            <a:CNum Title="行高，0取第一行高，NaN自动调整" ID="ItemHeight" TitleWidth="290" />
-            <a:CNum Title="磁贴项最小宽度，默认160" ID="MinItemWidth" TitleWidth="290" />
+            <a:CList Title="视图类型" ID="ViewMode" TitleWidth="90" />
+            <a:CList Title="选择模式" ID="SelectionMode" TitleWidth="90" />
+            <a:CList Title="分组列名" ID="GroupName" IsEditable="True" ColSpan="0.6" TitleWidth="90" />
+            <a:CBool Title="显示分组导航" ID="ShowGroupHeader" ShowTitle="False" ColSpan="0.4" />
+            <a:CNum Title="行高，0取第一行高，NaN自动" ID="ItemHeight" TitleWidth="240" />
+            <a:CNum Title="磁贴项最小宽度，默认160" ID="MinItemWidth" TitleWidth="240" />
             <a:CBool ID="ShowReportMenu" Title="表格视图左上脚显示报表相关的菜单项" ShowTitle="False" />
             <a:CBool ID="AutoSaveCols" Title="自动保存调整后的列宽、列序、隐藏列" ShowTitle="False" />
             <a:CBool Title="显示行分割线" ID="ShowItemBorder" ShowTitle="False" ColSpan="0.5" />
