Sql的变量或占位符的采用{}作为键的分割符，原来的[]和标准sql语法混

--- a/Demo/Demo.Crud/Control/CListDemo.xaml
+++ b/Demo/Demo.Crud/Control/CListDemo.xaml
@@ -40,7 +40,7 @@ WHERE
         FROM
             cm_user_role
         WHERE
-            user_id = @userid
+            user_id = @{userid}
     )
                         ]]>
                     </a:Sql>
@@ -75,7 +75,7 @@ SELECT
 FROM
     crud_大儿
 WHERE
-    parent_id = @[parentid]
+    parent_id = @parentid
                         ]]>
                     </a:Sql>
                 </a:CList.Sql>
@@ -92,7 +92,7 @@ SELECT
 FROM
     crud_小儿
 WHERE
-    group_id = #[parentid]#
+    group_id = #parentid#
                         ]]>
                     </a:Sql>
                 </a:CList.Sql>
